--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "yarn": "1.22.5",
+    "node": "12.18.4",
+    "npm": "6.14.8"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
